--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@ body{
     radial-gradient(1400px 800px at 50% -260px,#12171c 0%,#0b0f12 60%),
     var(--bg);
 }
-
-/* layout */
 .wrap{max-width:1180px; padding:28px 18px 120px; margin:0 auto}
 
 /* header */
-.top{display:flex; align-items:center; justify-content:space-between; gap:12px}
-.brand{display:flex; align-items:baseline; gap:14px}
-.logo{
-  font-weight:900; letter-spacing:.4px;
-  font-size:clamp(26px,4.8vw,38px);
-  color:var(--accent);
+.top{
+  display:flex; align-items:center; justify-content:space-between; gap:12px;
+  position:relative; z-index:1000; /* ponad resztą */
 }
+.brand{display:flex; align-items:baseline; gap:14px}
+.logo{font-weight:900; letter-spacing:.4px; font-size:clamp(26px,4.8vw,38px); color:var(--accent)}
 .tag{color:#a9b5c1; font-size:14px; opacity:.85}
 .actions{display:flex; align-items:center; gap:10px}
 .icon-btn{
@@ -40,8 +37,9 @@ body{
   color:#d7e0ea; position:relative;
   box-shadow: inset 0 0 0 1px rgba(255,255,255,.04),
               0 10px 30px rgba(0,0,0,.35);
+  z-index:1001; /* pewność, że jest nad wszystkim */
 }
-.icon-btn svg{opacity:.9}
+.icon-btn svg{opacity:.9; pointer-events:none}
 .badge{
   position:absolute; top:-8px; right:-8px; width:26px; height:26px;
   border-radius:50%; background:var(--accent);
@@ -49,14 +47,11 @@ body{
 }
 
 /* titles */
-h1{
-  font-size: clamp(34px, 6.2vw, 64px);
-  line-height: 1.06; margin: 14px 0 8px;
-}
+h1{font-size:clamp(34px,6.2vw,64px); line-height:1.06; margin:14px 0 8px}
 .sub{margin:0 0 24px; color:var(--muted); font-size:clamp(16px,2.4vw,21px)}
 
 /* hero / mic button */
-.hero{display:grid; place-items:center; margin:8px 0 16px}
+.hero{display:grid; place-items:center; margin:8px 0 16px; position:relative; z-index:2}
 .mic-wrap{width:min(88vw,600px)}
 #micBtn{
   width:100%; aspect-ratio:1/1; border:0; border-radius:999px; cursor:pointer;
@@ -64,6 +59,7 @@ h1{
   box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 24px 80px rgba(0,0,0,.55);
   transition:transform .25s ease, box-shadow .25s ease, filter .25s ease;
   position:relative; overflow:hidden; touch-action:manipulation;
+  z-index:3; /* nad ringiem, etc. */
 }
 #micBtn:hover{transform:translateY(-2px); filter:saturate(1.06)}
 #micBtn.recording{
@@ -72,20 +68,15 @@ h1{
              0 0 0 12px rgba(255,122,26,.08),
              0 28px 120px rgba(255,122,26,.35);
 }
-@keyframes pulse{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(1.02)}
-}
+@keyframes pulse{0%,100%{transform:scale(1)} 50%{transform:scale(1.02)}}
 .ring{
   position:absolute; inset:6%; border-radius:50%;
   border:2px dashed rgba(255,255,255,.08);
   filter:blur(.2px);
   animation:ring 6s linear infinite;
-  pointer-events:none;
+  pointer-events:none; /* nie blokuje klików */
 }
 @keyframes ring{to{transform:rotate(360deg)}}
-
-/* in-button hint */
 .mic-badge{
   position:absolute; left:50%; bottom:8%;
   transform:translateX(-50%);
@@ -93,6 +84,7 @@ h1{
   display:inline-flex; align-items:center; gap:10px;
   padding:11px 15px; border-radius:28px; font-size:15px; color:#d9e2ec;
   box-shadow:0 10px 30px rgba(0,0,0,.35);
+  pointer-events:none; /* żeby badge nie przejmował tapów */
 }
 .led{width:10px;height:10px;border-radius:50%}
 .led.idle{background:#8aa5b7}
@@ -119,12 +111,12 @@ h1{
 }
 .chip.active{border-color:#ff9838; color:#ff9838}
 
-/* menu panel (dummy) */
+/* menu panel */
 #menuPanel{
   position:fixed; top:74px; right:18px; width:260px; padding:12px;
   border-radius:16px; background:linear-gradient(180deg,#161c22,#0f1419);
   border:1px solid #24303a; box-shadow:0 18px 60px rgba(0,0,0,.45);
-  display:none; z-index:20;
+  display:none; z-index:9999; /* pewność że nad wszystkim */
 }
 #menuPanel a{display:block; padding:10px 12px; color:#dbe6ef; text-decoration:none; border-radius:10px}
 #menuPanel a:hover{background:#1a2128}
@@ -151,7 +143,6 @@ h1{
     <h1>Złóż zamówienie</h1>
     <p class="sub">Taxi, posiłek, a może nocleg?</p>
 
-    <!-- LOGO = PRZYCISK -->
     <div class="hero">
       <div class="mic-wrap">
         <button id="micBtn" aria-label="Naciśnij i mów">
@@ -161,13 +152,11 @@ h1{
       </div>
     </div>
 
-    <!-- TRANSKRYPCJA POD LOGO -->
     <div class="transcript" id="transcriptBox">
       <span class="led idle" id="liveDot"></span>
       <div id="transcriptText">Transkrypcja pojawi się tutaj…</div>
     </div>
 
-    <!-- CHIPSY -->
     <div class="chips" id="chips">
       <button class="chip active" data-cat="food">🍽️ Jedzenie</button>
       <button class="chip" data-cat="taxi">🚕 Taxi</button>
@@ -175,7 +164,6 @@ h1{
     </div>
   </div>
 
-  <!-- MENU -->
   <nav id="menuPanel" role="menu" aria-label="Menu">
     <a href="#" role="menuitem">Historia zamówień</a>
     <a href="#" role="menuitem">Ustawienia</a>
@@ -183,15 +171,16 @@ h1{
   </nav>
 
 <script>
-/* ===== MENU ===== */
+/* ===== MENU (naprawa zamykania/otwierania) ===== */
 const menuBtn = document.getElementById('menuBtn');
 const panel = document.getElementById('menuPanel');
-menuBtn.addEventListener('click', e=>{
+menuBtn.addEventListener('click', (e)=>{
   e.stopPropagation();
   panel.style.display = (panel.style.display==='block') ? 'none' : 'block';
 });
-document.addEventListener('click', e=>{
-  if(panel.style.display==='block' && !panel.contains(e.target) && e.target!==menuBtn){
+document.addEventListener('click', (e)=>{
+  const onBtn = e.target.closest('#menuBtn');
+  if(panel.style.display==='block' && !panel.contains(e.target) && !onBtn){
     panel.style.display='none';
   }
 });
@@ -222,7 +211,7 @@ function makeRecognizer(){
   const r = new SR();
   r.lang = 'pl-PL';
   r.interimResults = true;
-  r.continuous = false; // jedna wypowiedź
+  r.continuous = false;
   r.maxAlternatives = 1;
   return r;
 }
@@ -246,7 +235,7 @@ function startListen(){
       (final ? '<strong>'+final.trim()+'</strong> ' : '') +
       (interim ? '<span style="opacity:.7">'+interim.trim()+'</span>' : '');
   };
-  rec.onerror = (e)=>{ stopListen(); };
+  rec.onerror = ()=>{ stopListen(); };
   rec.onend = ()=>{ stopListen(); };
 
   try{ rec.start(); }catch{ stopListen(); }
@@ -261,7 +250,8 @@ function stopListen(){
   liveDot.classList.add('idle'); liveDot.classList.remove('live');
 }
 
-micBtn.addEventListener('click', ()=>{
+micBtn.addEventListener('click', (e)=>{
+  e.stopPropagation();
   if(listening) stopListen(); else startListen();
 });
 micBtn.addEventListener('keydown', (e)=>{
